--- a/main.scss
+++ b/main.scss
@@ -11,3 +11,11 @@
       opacity: 0;
     }
   }
+
+  .stock-div{
+    background-color: aquamarine;
+    border: 2px solid black;
+  }
+.headers{
+  color: orangered;
+}
