--- a/main.scss
+++ b/main.scss
@@ -1,9 +1,11 @@
 /* import är deprecated */
 @use 'variables';
-
+body{
+  background-color: darkblue;
+}
 .blink_me {
     animation: blinker 1s linear infinite;
-    color: red;
+    color: white;
   }
   
   @keyframes blinker {
@@ -13,9 +15,50 @@
   }
 
   .stock-div{
-    background-color: aquamarine;
+    color: black;
+    background-color: aliceblue;
     border: 2px solid black;
   }
 .headers{
-  color: orangered;
+  color: black;
+}
+video {
+  object-fit: fill;
+}
+@media only screen and (max-width: 600px) {
+  div{
+    text-align: center;
+  }
+  video{
+    width: 100%;
+    height: auto;
+  }
+  li{
+    color: aliceblue;
+    margin-bottom: 5px;
+  }
+  .section-main{
+    display: flex;
+    flex-direction: column;
+  }
+  nav{
+    margin: auto;
+  }
+  .main-content{
+    margin: auto;
+    text-align: center;
+    color: aliceblue;
+  }
+  input{
+    margin-bottom: 10px;
+  }
+
+  .search-box{
+    margin: auto;
+  }
+
+  footer{
+    margin: auto;
+    color: aliceblue;
+  }
 }
