--- a/main.scss
+++ b/main.scss
@@ -1,11 +1,178 @@
 /* import är deprecated */
-@use 'variables';
+@use 'variables'as *;
 body{
-  background-color: darkblue;
+  background-color: $bg-color;
 }
+h1,h2,h4{
+  font-family: $main-font;
+  font-weight: $header;
+}
+p,a,li{
+font-family: $main-font;
+font-weight: $regular;
+color: $textcolor;
+}
+
+/* Desktop styling */
+
+nav{
+  display: flex;
+  flex-direction: column;
+}
+div{
+  text-align: center;
+}
+video{
+ margin: auto;
+ border-radius: 20px;
+ -webkit-border-radius: 20px;
+ -moz-border-radius: 20px;
+ -ms-border-radius: 20px;
+ -o-border-radius: 20px;
+}
+/* Search form */
+#name{
+    padding: 10px 15px;
+    min-width: 55%;
+    font-size: 1rem;
+    line-height: 1.5em;
+    color: #373D41;
+    background-color: #FFF;
+    background-clip: padding-box;
+    border: 1px solid #C5C5C7;
+    border-radius: 6px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    flex-grow: 1;
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.search-submit{
+/* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
+    background-color:#1a1a1a;
+    color: #ffffff;
+    font-weight: 700;
+    text-decoration: none;
+    white-space: normal;
+    -webkit-transition: none;
+    transition: none;
+    cursor: pointer;
+    outline: 0;
+    padding: 14px 24px 13px;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    border-radius: 6px;
+    border-width: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+.search-form .input-group{
+  text-align:center;
+}
+/* Search form end */
+.main-content{
+margin: 20px;
+  text-align: center;
+  color: $textcolor;
+
+    .search-box{
+
+    }
+    .ticker-box{
+padding: 20px;
+margin-bottom: 10px;
+    }
+    .ticker-info{
+      border: 2px solid white;
+      padding: 20px;
+    }
+}
+
+.li-news{
+  color: $textcolor;
+  margin-bottom: 10px;
+}
+.li-news:hover{
+  background-color: $hover-color;
+}
+.section-main{
+  display: flex;
+  flex-direction: column;
+}
+nav{
+  margin: auto;
+}
+
+.section-news{
+  .news{
+    margin: 40px;
+    border: solid white 2px;
+  }
+  .news-section{
+    display: flex;
+    max-width: 100%;
+    justify-content: left;
+    overflow: scroll;
+  }
+  .header-news{
+    color: $textcolor;
+  }
+}
+input{
+  margin-bottom: 10px;
+}
+
+.search-box{
+  margin: auto;
+}
+.art-div{
+  width: 80%;
+  border: 2px solid white;
+  padding: 5px;
+  margin: 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+  .art-img{
+    width:250px;
+    height:250px;
+    padding: 20px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+  .art-para{
+    color: $textcolor;
+    font-size: small;
+  }
+     .art-title{
+       color: $textcolor;
+          }
+        .art-sum{
+          color: $textcolor;
+           .art-p-sum{
+             color: white;
+             line-height: 30px;
+             }
+          }
+
+footer{
+  margin: auto;
+  color: $textcolor;
+  .footer-header{
+  text-align: center;
+  }
+}
+
 .blink_me {
     animation: blinker 1s linear infinite;
-    color: white;
+    color: $textcolor;
   }
   
   @keyframes blinker {
@@ -16,7 +183,7 @@ body{
 
   .stock-div{
     color: black;
-    background-color: aliceblue;
+    background-color: $textcolor;
     border: 2px solid black;
   }
 .headers{
@@ -25,7 +192,28 @@ body{
 video {
   object-fit: fill;
 }
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: solid white 2px; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: $bg-color; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: $hover-color; /* Add a dark-grey background on hover */
+}
 @media only screen and (max-width: 600px) {
+
   div{
     text-align: center;
   }
@@ -33,9 +221,54 @@ video {
     width: 100%;
     height: auto;
   }
-  li{
-    color: aliceblue;
-    margin-bottom: 5px;
+/* Search form */
+#name{
+  /* this class is for input field, if in your code its different, just substitute the class name '.search-field' */
+      padding: 10px 15px;
+      min-width: 55%;
+      font-size: 1rem;
+      line-height: 1.5em;
+      color: #373D41;
+      background-color: #FFF;
+      background-clip: padding-box;
+      border: 1px solid #C5C5C7;
+      border-radius: 6px;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      flex-grow: 1;
+      border-right: none;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+  }
+  .search-submit{
+  /* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
+      background-color:#1a1a1a;
+      color: #ffffff;
+      font-weight: 700;
+      text-decoration: none;
+      white-space: normal;
+      -webkit-transition: none;
+      transition: none;
+      cursor: pointer;
+      outline: 0;
+      padding: 14px 24px 13px;
+      font-size: 1rem;
+      line-height: 1.25rem;
+      border-radius: 6px;
+      border-width: 0;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+  }
+  .search-form .input-group{
+    text-align:center;
+  }
+  /* Search form end */
+.li-news{
+    color: $textcolor;
+    margin-bottom: 10px;
+  }
+  .li-news:hover{
+    background-color: $hover-color;
   }
   .section-main{
     display: flex;
@@ -47,7 +280,18 @@ video {
   .main-content{
     margin: auto;
     text-align: center;
-    color: aliceblue;
+    color: $textcolor;
+   
+  }
+  .section-news{
+
+    .news-section{
+      display: block;
+      
+    }
+    .header-news{
+      color: $textcolor;
+    }
   }
   input{
     margin-bottom: 10px;
@@ -56,9 +300,33 @@ video {
   .search-box{
     margin: auto;
   }
+  .art-div{
+    border: 2px solid white;
+    padding: 5px;
+    margin-bottom: 28px;
 
+    .art-img{
+      width:50%;
+      height:50%;
+    }
+    .art-para{
+      color: $textcolor;
+    }
+       .art-title{
+         color: $textcolor;
+            }
+          .art-sum{
+            color: $textcolor;
+             .art-p-sum{
+               color: white;
+               }
+            }
+  }
   footer{
     margin: auto;
-    color: aliceblue;
+    color: $textcolor;
+    .footer-header{
+    text-align: center;
+    }
   }
 }
