--- a/main.scss
+++ b/main.scss
@@ -4,11 +4,11 @@ body{
   background-color: $bg-color;
 }
 h1,h2,h4{
-  font-family: $main-font;
+  font-family: $font-fam;
   font-weight: $header;
 }
 p,a,li{
-font-family: $main-font;
+font-family: $font-fam;
 font-weight: $regular;
 color: $textcolor;
 }
@@ -29,6 +29,40 @@ video{
  -moz-border-radius: 20px;
  -ms-border-radius: 20px;
  -o-border-radius: 20px;
+}
+
+
+.button-31 {
+  background-color: #222;
+  border-radius: 4px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Farfetch Basis","Helvetica Neue",Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.5;
+  margin: 0;
+  max-width: none;
+  min-height: 44px;
+  min-width: 10px;
+  outline: none;
+  overflow: hidden;
+  padding: 9px 20px 8px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+}
+
+.button-31:hover,
+.button-31:focus {
+  opacity: .75;
 }
 /* Search form */
 #name{
