--- a/main.css
+++ b/main.css
@@ -1,12 +1,225 @@
 @charset "UTF-8";
 /* import är deprecated */
 body {
-  background-color: darkblue;
+  background-color: black;
+}
+
+h1, h2, h4 {
+  font-family: "Oswald", sans-serif;
+  font-weight: bold;
+}
+
+p, a, li {
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+  color: aliceblue;
+}
+
+/* Desktop styling */
+display-none {
+  display: none;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+}
+
+div {
+  text-align: center;
+}
+
+video {
+  margin: auto;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.button-31 {
+  background-color: #222;
+  border-radius: 4px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Farfetch Basis", "Helvetica Neue", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.5;
+  margin: 0;
+  max-width: none;
+  min-height: 44px;
+  min-width: 10px;
+  outline: none;
+  overflow: hidden;
+  padding: 9px 20px 8px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+}
+
+.button-31:hover,
+.button-31:focus {
+  opacity: 0.75;
+}
+
+/* Search form */
+#name {
+  padding: 10px 15px;
+  min-width: 55%;
+  font-size: 1rem;
+  line-height: 1.5em;
+  color: #373D41;
+  background-color: #FFF;
+  background-clip: padding-box;
+  border: 1px solid #C5C5C7;
+  border-radius: 6px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  flex-grow: 1;
+  border-right: none;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.search-submit {
+  /* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
+  background-color: #1a1a1a;
+  color: #ffffff;
+  font-weight: 700;
+  text-decoration: none;
+  white-space: normal;
+  -webkit-transition: none;
+  transition: none;
+  cursor: pointer;
+  outline: 0;
+  padding: 14px 24px 13px;
+  font-size: 1rem;
+  line-height: 1.25rem;
+  border-radius: 6px;
+  border-width: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.search-form .input-group {
+  text-align: center;
+}
+
+/* Search form end */
+.main-content {
+  margin: 20px;
+  text-align: center;
+  color: aliceblue;
+}
+.main-content .ticker-box {
+  padding: 20px;
+  margin-bottom: 10px;
+}
+.main-content .ticker-info {
+  border: 2px solid white;
+  padding: 20px;
+}
+
+.li-news {
+  color: aliceblue;
+  margin-bottom: 10px;
+}
+
+.li-news:hover {
+  background-color: lightgray;
+}
+
+.section-main {
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  margin: auto;
+}
+
+.section-news .news {
+  margin: 40px;
+  border: solid white 2px;
+}
+.section-news .news-section {
+  display: flex;
+  max-width: 100%;
+  justify-content: left;
+  overflow: scroll;
+}
+.section-news .header-news {
+  color: aliceblue;
+}
+
+input {
+  margin-bottom: 10px;
+}
+
+.search-box {
+  margin: auto;
+}
+
+.art-div {
+  width: 80%;
+  border: 2px solid white;
+  padding: 5px;
+  margin: 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.art-img {
+  width: 250px;
+  height: 250px;
+  padding: 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.art-para {
+  color: aliceblue;
+  font-size: small;
+}
+
+.art-title {
+  color: aliceblue;
+}
+
+.art-sum {
+  color: aliceblue;
+}
+.art-sum .art-p-sum {
+  color: white;
+  line-height: 30px;
+}
+
+footer {
+  margin: auto;
+  color: aliceblue;
+}
+footer .footer-header {
+  text-align: center;
 }
 
 .blink_me {
   animation: blinker 1s linear infinite;
-  color: white;
+  color: aliceblue;
 }
 
 @keyframes blinker {
@@ -28,6 +241,27 @@ video {
   object-fit: fill;
 }
 
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: solid white 2px; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: black; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: lightgray; /* Add a dark-grey background on hover */
+}
+
+/* Media Query for Phone */
 @media only screen and (max-width: 600px) {
   div {
     text-align: center;
@@ -36,9 +270,62 @@ video {
     width: 100%;
     height: auto;
   }
-  li {
+  /* Search form */
+  #name {
+    /* this class is for input field, if in your code its different, just substitute the class name '.search-field' */
+    padding: 10px 15px;
+    min-width: 55%;
+    font-size: 1rem;
+    line-height: 1.5em;
+    color: #373D41;
+    background-color: #FFF;
+    background-clip: padding-box;
+    border: 1px solid #C5C5C7;
+    border-radius: 6px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    flex-grow: 1;
+    border-right: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  .search-submit {
+    /* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
+    background-color: #1a1a1a;
+    color: #ffffff;
+    font-weight: 700;
+    text-decoration: none;
+    white-space: normal;
+    -webkit-transition: none;
+    transition: none;
+    cursor: pointer;
+    outline: 0;
+    padding: 14px 24px 13px;
+    font-size: 1rem;
+    line-height: 1.25rem;
+    border-radius: 6px;
+    border-width: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  .search-form .input-group {
+    text-align: center;
+  }
+  /* Search form end */
+  .news-img {
+    width: 100%;
+  }
+  .article-div {
+    padding: 20px;
+    margin-top: 10%;
+    border: solid 2px red;
+  }
+  .li-news {
     color: aliceblue;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+  }
+  .li-news:hover {
+    background-color: lightgray;
   }
   .section-main {
     display: flex;
@@ -52,15 +339,49 @@ video {
     text-align: center;
     color: aliceblue;
   }
+  .section-news .news-section {
+    display: block;
+  }
+  .section-news .header-news {
+    color: aliceblue;
+  }
   input {
     margin-bottom: 10px;
   }
   .search-box {
     margin: auto;
   }
+  .search-box .button-31 {
+    border-radius: 10px;
+    width: 200px;
+  }
+  .art-div {
+    border: 2px solid white;
+    padding: 5px;
+    margin-bottom: 28px;
+  }
+  .art-div .art-img {
+    width: 50%;
+    height: 50%;
+  }
+  .art-div .art-para {
+    color: aliceblue;
+  }
+  .art-div .art-title {
+    color: aliceblue;
+  }
+  .art-div .art-sum {
+    color: aliceblue;
+  }
+  .art-div .art-sum .art-p-sum {
+    color: white;
+  }
   footer {
     margin: auto;
     color: aliceblue;
+  }
+  footer .footer-header {
+    text-align: center;
   }
 }
 
