--- a/main.css
+++ b/main.css
@@ -9,10 +9,16 @@ h1, h2, h4 {
   font-weight: bold;
 }
 
-p, a, li {
+p, a, li, label {
   font-family: "Oswald", sans-serif;
   font-weight: 500;
   color: aliceblue;
+}
+
+select {
+  font-family: "Oswald", sans-serif;
+  font-weight: 500;
+  color: #1a1a1a;
 }
 
 /* Desktop styling */
@@ -39,6 +45,7 @@ video {
 }
 
 .button-31 {
+  margin: 10px;
   background-color: #222;
   border-radius: 4px;
   border-style: none;
@@ -50,12 +57,8 @@ video {
   font-size: 16px;
   font-weight: 700;
   line-height: 1.5;
-  margin: 0;
-  max-width: none;
   min-height: 44px;
   min-width: 10px;
-  outline: none;
-  overflow: hidden;
   padding: 9px 20px 8px;
   position: relative;
   text-align: center;
@@ -69,6 +72,7 @@ video {
 .button-31:hover,
 .button-31:focus {
   opacity: 0.75;
+  background-color: #4b4c4e;
 }
 
 /* Search form */
@@ -91,7 +95,6 @@ video {
 }
 
 .search-submit {
-  /* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
   background-color: #1a1a1a;
   color: #ffffff;
   font-weight: 700;
