--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@ p, a, li, label {
   color: aliceblue;
 }
 
+input {
+  margin-top: 20px;
+}
+
 select {
   font-family: "Oswald", sans-serif;
   font-weight: 500;
@@ -89,9 +93,6 @@ video {
   -webkit-box-shadow: none;
   box-shadow: none;
   flex-grow: 1;
-  border-right: none;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
 }
 
 .search-submit {
@@ -277,7 +278,7 @@ video {
   #name {
     /* this class is for input field, if in your code its different, just substitute the class name '.search-field' */
     padding: 10px 15px;
-    min-width: 55%;
+    min-width: 60%;
     font-size: 1rem;
     line-height: 1.5em;
     color: #373D41;
@@ -288,9 +289,6 @@ video {
     -webkit-box-shadow: none;
     box-shadow: none;
     flex-grow: 1;
-    border-right: none;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
   }
   .search-submit {
     /* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
@@ -307,9 +305,6 @@ video {
     font-size: 1rem;
     line-height: 1.25rem;
     border-radius: 6px;
-    border-width: 0;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
   }
   .search-form .input-group {
     text-align: center;
@@ -341,6 +336,28 @@ video {
     margin: auto;
     text-align: center;
     color: aliceblue;
+  }
+  .hidden {
+    display: none;
+  }
+  .show-ticker-box {
+    display: block;
+    background-color: #222;
+    border: #979797 solid 2px;
+  }
+  .stock-div {
+    padding: 10px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .stock-div #headers {
+    background-color: #222;
+    color: aliceblue;
+  }
+  .stock-div #headers:hover {
+    background-color: #979797;
   }
   .section-news .news-section {
     display: block;
