--- a/main.scss
+++ b/main.scss
@@ -12,6 +12,10 @@ font-family: $font-fam;
 font-weight: $regular;
 color: $textcolor;
 }
+
+input{
+  margin-top: 20px;
+}
 select{
   font-family: $font-fam;
   font-weight: $regular;
@@ -82,9 +86,6 @@ video{
     -webkit-box-shadow: none;
     box-shadow: none;
     flex-grow: 1;
-    border-right: none;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
 }
 .search-submit{
     background-color:#1a1a1a;
@@ -266,7 +267,7 @@ video {
 #name{
   /* this class is for input field, if in your code its different, just substitute the class name '.search-field' */
       padding: 10px 15px;
-      min-width: 55%;
+      min-width: 60%;
       font-size: 1rem;
       line-height: 1.5em;
       color: #373D41;
@@ -277,9 +278,6 @@ video {
       -webkit-box-shadow: none;
       box-shadow: none;
       flex-grow: 1;
-      border-right: none;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
   }
   .search-submit{
   /* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
@@ -296,9 +294,6 @@ video {
       font-size: 1rem;
       line-height: 1.25rem;
       border-radius: 6px;
-      border-width: 0;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
   }
   .search-form .input-group{
     text-align:center;
@@ -332,6 +327,29 @@ video {
     text-align: center;
     color: $textcolor;
    
+  }
+  .hidden{
+    display: none;
+  }
+  .show-ticker-box{
+    display: block;
+ background-color: #222;
+ border: #979797 solid 2px;
+  }
+  .stock-div{
+    padding: 10px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+        #headers{
+         background-color: #222;
+         color: aliceblue;
+        }
+        #headers:hover{
+          background-color: #979797;
+        }
+
   }
   .section-news{
 
