--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,3 @@
-/* import är deprecated */
 @use 'variables'as *;
 body{
   background-color: $bg-color;
@@ -51,7 +50,28 @@ nav{
 input{
   margin-bottom: 10px;
 }
-
+@mixin button {
+  margin: 10px;
+  background-color: #222;
+  border-radius: 4px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: $font-fam;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.5;
+  width: 25%;
+  padding: 9px 20px 8px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
 /* Styling Desktop */
 
 
@@ -92,26 +112,7 @@ input{
 
 
   .button-search{
-    margin: 10px;
-    background-color: #222;
-    border-radius: 4px;
-    border-style: none;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    font-family: $font-fam;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.5;
-    width: 25%;
-    padding: 9px 20px 8px;
-    position: relative;
-    text-align: center;
-    text-transform: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+   @include button() 
   }
   
   .button-search:hover,
@@ -161,15 +162,18 @@ input{
 .user-news{
 display: flex;
 flex-direction: row;
-overflow: scroll;
-gap: 5%;
+overflow-x: scroll;
+gap: 12px;
+scroll-snap-type: x mandatory;
+scroll-padding: 24px;
 
   .article-div{
-    width: 80%;
+    flex: 0 0 50%;
     border: solid $textcolor 2px;
     padding: 20px;
     margin-bottom: 20px;
-    .news-img{
+    scroll-snap-align: start;
+        .news-img{
       margin-top: 20px;
       width: 300px;
       height: 250px;
@@ -206,13 +210,27 @@ margin: 20px;
   color: $textcolor;
 
     .ticker-box{
-padding: 20px;
-margin-bottom: 10px;
+    padding: 20px;
+    margin-bottom: 10px;
+    background-color: $hover-color;
     }
     .ticker-info{
       border: 2px solid white;
       padding: 20px;
     }
+}
+.show-ticker-box{
+    display: block;
+    background-color: #222;
+    border: #979797 solid 2px;
+    margin-top: 20px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    width: 500px;
+    margin: auto;
 }
 .section-main{
   display: flex;
@@ -303,12 +321,7 @@ video {
   justify-content: center;
   
     .top {
-      text-decoration: none;
-      padding: 10px;
-      font-family: sans-serif;
-      color: #fff;
-      background: #000;
-      border-radius: 100px;
+    @include button()
     }
     .top:hover{
       background-color: #4b4c4e;
@@ -339,25 +352,14 @@ footer{
   }
 /* Search form */
   .search-submit{
-  /* this class is for submit button, if in your code its different, just substitute the class name '.search-submit' */
-      background-color:#1a1a1a;
-      color: #ffffff;
-      font-weight: 700;
-      text-decoration: none;
-      white-space: normal;
-      -webkit-transition: none;
-      transition: none;
-      cursor: pointer;
-      outline: 0;
-      padding: 14px 24px 13px;
-      font-size: 1rem;
-      line-height: 1.25rem;
-      border-radius: 6px;
+      @include button()
   }
   .search-form .input-group{
     text-align:center;
   }
   /* Search form end */
+
+  
 
   .news-img{
     width: 100%;
@@ -379,15 +381,12 @@ footer{
     margin: auto;
     text-align: center;
     color: $textcolor;
+    .cl-div{
+      background-color: #4b4c4e;
+    }
   }
   .hidden{
     display: none;
-  }
-  .show-ticker-box{
-    display: block;
-    background-color: #222;
-    border: #979797 solid 2px;
-    margin-top: 20px;
   }
   .stock-div{
     padding: 10px;
@@ -454,17 +453,19 @@ footer{
     
   }
 .show-ticker-box{
-  background-color: none;
-  border: radius 20px;;
-  -webkit-border-radius:20px;
-  -moz-border-radius:20px;
-  -ms-border-radius:20px;
-  -o-border-radius:20px;
-  .cl-div{
-    padding: 30px;
-  }
+  display: block;
+  background-color: #222;
+  border: #979797 solid 2px;
+  margin-top: 20px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
-  
+.cl-div{
+  padding: 30px;
+}
   .art-div{
     border: 2px solid white;
     padding: 5px;
@@ -488,6 +489,23 @@ footer{
             }
           
   }
+  .back-to-top{
+
+    display: flex;
+    margin: 40px;
+    justify-content: center;
+    
+      .top {
+        text-decoration: none;
+        padding: 10px;
+        font-family: sans-serif;
+        color: #fff;
+        background: $bg-color;
+      }
+      .top:hover{
+        background-color: $hover-color;
+      }
+    }
 
 }
 
